@@ -146,6 +146,9 @@ NEW FEATURES
 	result are in UTF-8 when any input to that element is declared
 	as UTF-8.
 
+    o	The undocumented limit of 8191 bytes on comments (from # to
+	the end of the line) in R code has been removed.
+
 
 INSTALLATION
 
